<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_notice_board"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.ac.jntuace.noticeboard.NoticeBoard">
<android.support.v4.widget.SwipeRefreshLayout
    android:layout_width="match_parent"
    android:id="@+id/swipe_layout"

    android:layout_height="match_parent"
    >
    <android.support.v7.widget.RecyclerView
    android:id="@+id/main_board_list"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
       android:layout_width="match_parent"
    android:padding="5dp" />


</android.support.v4.widget.SwipeRefreshLayout>
    <TextView
        android:gravity="center"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/done_for_today"
        android:id="@+id/done_for_today"
        android:textColor="#88000000"
        android:visibility="gone"

        android:textSize="25sp"
        />
</RelativeLayout>
